# qwen3.5-deploy

./: .gitignore  README.md  agent.py  client.py  docker-compose.yml
app/: app.py  pyproject.toml  requirements.txt
app/archived/: app.py
app/config/: mcp_config.py
app/mcp/: code_execution.py
app/prompts/: middleware_todolist.py  prompt_base.py  prompt_enhance.py  subagent_search.py
app/space/: food.md
app/tools/: tool_fs.py  tool_math.py  tool_runtime.py  tool_sci.py
app/utils/: device_info.py  fix_dashscope.py  fix_deepseek.py  remove_html.py  think_view.py  tool_view.py  web_ui.py
